# ZamaHEBid

./: Cargo.toml  Makefile  README.md
src/: auction.rs  main.rs  parameters_builder.rs
tests/: integration_Test.rs  performance_Test.rs  unit_Test.rs
